[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/vector/domino_icons/normal/turn_left_90_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/vector/domino_icons/normal/turn_right_90_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/vector/domino_icons/normal/foward_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/vector/domino_icons/normal/turn_right_180_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/vector/domino_icons/turn_right_90_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/vector/domino_icons/foward_icon.png" type="Texture" id=6]
[ext_resource path="res://script/control_container.gd" type="Script" id=7]
[ext_resource path="res://assets/vector/domino_icons/hoover/turn_left_180_icon.png" type="Texture" id=8]
[ext_resource path="res://assets/vector/domino_icons/hoover/turn_left_90_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/vector/domino_icons/hoover/wait_icon.png" type="Texture" id=10]
[ext_resource path="res://assets/vector/domino_icons/normal/wait_icon.png" type="Texture" id=11]
[ext_resource path="res://assets/vector/domino_icons/hoover/turn_right_icon.png" type="Texture" id=12]
[ext_resource path="res://assets/vector/domino_icons/normal/turn_left_180_icon.png" type="Texture" id=13]

[node name="Control_list" type="MarginContainer"]
margin_right = 64.0
margin_bottom = 404.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 66.0
margin_bottom = 416.0

[node name="Button_Foward" type="TextureButton" parent="VBoxContainer"]
margin_right = 66.0
margin_bottom = 66.0
hint_tooltip = "Ir Adelante"
action_mode = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )

[node name="Button_Right_90" type="TextureButton" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 66.0
margin_bottom = 136.0
hint_tooltip = "Girar Derecha 90ª"
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )

[node name="Button_Left_90" type="TextureButton" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 66.0
margin_bottom = 206.0
hint_tooltip = "Girar Izquierda 90º"
action_mode = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 9 )

[node name="Button_Right_180" type="TextureButton" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 66.0
margin_bottom = 276.0
hint_tooltip = "Girar 180º Derecha"
action_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 12 )

[node name="Button_Left_180" type="TextureButton" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 66.0
margin_bottom = 346.0
hint_tooltip = "Girar 180º izquierda
"
action_mode = 0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 8 )

[node name="Button_Wait" type="TextureButton" parent="VBoxContainer"]
margin_top = 350.0
margin_right = 66.0
margin_bottom = 416.0
hint_tooltip = "Esperar"
action_mode = 0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="VBoxContainer/Button_Foward" to="." method="_on_Button_Foward_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Right_90" to="." method="_on_Button_Right_90_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Left_90" to="." method="_on_Button_Left_90_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Right_180" to="." method="_on_Button_Right_180_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Left_180" to="." method="_on_Button_Left_180_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Wait" to="." method="_on_Button_Wait_pressed"]
